changes in view

--- a/app/src/main/res/layout/repo_adapter.xml
+++ b/app/src/main/res/layout/repo_adapter.xml
@@ -40,7 +40,8 @@
             android:id="@id/name"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
             android:fontFamily="@font/roboto"
             android:text="Anshuman"
             android:textColor="#52575C"
@@ -57,6 +58,7 @@
             android:text="@string/fullname"
             android:textColor="#52575C"
             android:textSize="15sp"
+            android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toTopOf="@id/details"
             app:layout_constraintStart_toStartOf="@+id/name"
             app:layout_constraintTop_toBottomOf="@id/name" />
@@ -65,7 +67,6 @@
             android:id="@+id/details"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:orientation="vertical"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
@@ -76,9 +77,12 @@
                 android:id="@+id/description"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginTop="6dp"
+                android:layout_marginTop="8dp"
+                android:textColor="#52575C"
+                android:fontFamily="@font/pingfang"
                 android:text="msalkjdflkjdflkdjflkjflkjglkkfmdf"
                 app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"
                 app:layout_constraintStart_toStartOf="@id/full_name"
                 app:layout_constraintTop_toBottomOf="@id/full_name" />
 
@@ -91,8 +95,8 @@
                     android:id="@+id/language_icon"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@id/description"
                     app:layout_constraintTop_toBottomOf="@id/description"
@@ -102,9 +106,9 @@
                     android:id="@+id/language"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="16dp"
                     android:text="C++"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/language_icon"
@@ -115,8 +119,8 @@
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:layout_marginStart="32dp"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/language"
                     app:layout_constraintTop_toBottomOf="@id/description"
@@ -126,9 +130,9 @@
                     android:id="@+id/fork"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="16dp"
                     android:text="400"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/fork_icon"
@@ -139,8 +143,8 @@
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:layout_marginStart="32dp"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/fork"
                     app:layout_constraintTop_toBottomOf="@id/description"
@@ -150,9 +154,9 @@
                     android:id="@+id/watcher"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="16dp"
                     android:text="40"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/watcher_icon"
