--- a/app/src/main/res/layout/shimmer_layout.xml
+++ b/app/src/main/res/layout/shimmer_layout.xml
@@ -51,10 +51,12 @@
         android:id="@+id/full_name"
         android:layout_width="260dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="21dp"
+        android:layout_marginEnd="36dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:cardCornerRadius="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/name"
         app:layout_constraintTop_toBottomOf="@id/name">
 
