--- a/app/src/main/res/layout/shimmer_layout.xml
+++ b/app/src/main/res/layout/shimmer_layout.xml
@@ -53,18 +53,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="21dp"
-        android:layout_marginEnd="36dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:cardCornerRadius="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/name"
-        app:layout_constraintTop_toBottomOf="@id/name">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/name"
+        app:layout_constraintTop_toBottomOf="@id/name"
+        android:layout_marginEnd="36dp">
 
         <TextView
             android:layout_width="260dp"
             android:layout_height="wrap_content"
-            android:background="#E8E8E8"
-             />
+            android:background="#E8E8E8" />
     </androidx.cardview.widget.CardView>
 
 
